Select Linked All operator not refreshing when changing delimit mode #59535

Closed
opened 2018-12-18 05:45:52 +01:00 by Oleg · 4 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GTX 1050 TI

Blender Version
Broken:
2.80, 4fceaf3848, blender2.8, 2018-12-18

Short description of error
Select Linked All operator not refreshing selection when trying to change delimit option.
It seem not to work only in bottom left popup since in "Adjust Last Operation" everything is OK.

Exact steps for others to reproduce the error

  1. Select face/edge/vertex
  2. Use Ctrl+A hotkey
  3. Try to change delimit option in left bottom left popup
  4. Try to change delimit option in Edit->Adjust Last Operation popup

https://i.imgur.com/rfPLGaw.gif

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GTX 1050 TI **Blender Version** Broken: 2.80, 4fceaf3848b, blender2.8, 2018-12-18 **Short description of error** Select Linked All operator not refreshing selection when trying to change delimit option. It seem not to work only in bottom left popup since in "Adjust Last Operation" everything is OK. **Exact steps for others to reproduce the error** 1. Select face/edge/vertex 2. Use Ctrl+A hotkey 3. Try to change delimit option in left bottom left popup 4. Try to change delimit option in Edit->Adjust Last Operation popup https://i.imgur.com/rfPLGaw.gif
Author

Added subscriber: @DotBow

Added subscriber: @DotBow
Author

Same situation covers the Select Linked operator too.

Same situation covers the Select Linked operator too.
Campbell Barton self-assigned this 2018-12-18 06:53:38 +01:00

This issue was referenced by 9f25dad0a9

This issue was referenced by 9f25dad0a9e1e172c0f6e19de3ce42cbbeef56f1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59535
No description provided.