Fix T59535: Select linked delimit doesn't refresh